<?xml version="1.0"?>
<package format="2">
  <name>astuff_sensor_msgs</name>
  <version>2.0.0</version>
  <description>Messages specific to AStuff-provided sensors.</description>
  <license>GPLv3</license>

  <url type="repository">https://github.com/astuff/astuff_sensor_specific_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_specific_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>delphi_esr_msgs</depend>
  <depend>delphi_srr_msgs</depend>
  <depend>ibeo_msgs</depend>
  <depend>kartech_linear_actuator_msgs</depend>
  <depend>mobileye_560_660_msgs</depend>
  <depend>neobotix_usboard_msgs</depend>
  <depend>pacmod_msgs</depend>

  <export>
    <metapackage />
  </export>
</package>
