<?xml version="1.0"?>
<package format="2">
  <name>astuff_sensor_msgs</name>
  <version>2.1.0</version>
  <description>Messages specific to AStuff-provided sensors.</description>
  <license>MIT</license>

  <url type="repository">https://github.com/astuff/astuff_sensor_specific_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_specific_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>delphi_esr_msgs</exec_depend>
  <exec_depend>delphi_srr_msgs</exec_depend>
  <exec_depend>ibeo_msgs</exec_depend>
  <exec_depend>kartech_linear_actuator_msgs</exec_depend>
  <exec_depend>mobileye_560_660_msgs</exec_depend>
  <exec_depend>neobotix_usboard_msgs</exec_depend>
  <exec_depend>pacmod_msgs</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
