<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astuff_sensor_msgs</name>
  <version>3.1.0</version>
  <description>Messages specific to AStuff-provided sensors.</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/astuff_sensor_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <exec_depend>delphi_esr_msgs</exec_depend>
  <exec_depend>delphi_srr_msgs</exec_depend>
  <exec_depend>derived_object_msgs</exec_depend>
  <exec_depend>ibeo_msgs</exec_depend>
  <exec_depend>kartech_linear_actuator_msgs</exec_depend>
  <exec_depend>mobileye_560_660_msgs</exec_depend>
  <exec_depend>neobotix_usboard_msgs</exec_depend>
  <exec_depend>pacmod_msgs</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
