<?xml version="1.0"?>
<package>
  <name>astuff_sensor_specific_msgs</name>
  <version>2.0.0</version>
  <description>Messages specific to AStuff-provided sensors.</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>GNU GPL v3</license>
  <url type="repository">https://github.com/astuff/astuff_sensor_specific_msgs</url>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>delphi_esr_msgs</run_depend>
  <run_depend>delphi_srr_msgs</run_depend>
  <run_depend>ibeo_lux_msgs</run_depend>
  <run_depend>ibeo_scala_msgs</run_depend>
  <run_depend>kartech_linear_actuator_msgs</run_depend>
  <run_depend>mobileye_560_660_msgs</run_depend>
  <run_depend>neobotix_usboard_msgs</run_depend>
  <run_depend>pacmod_msgs</run_depend>
</package>
