<?xml version="1.0"?>
<package format="2">
  <name>delphi_esr_msgs</name>
  <version>2.1.0</version>
  <description>Message definitions for the Delphi ESR</description>
  <license>MIT</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>
  <author email="jkale@autonomoustuff.com">Joe Kale</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
