<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delphi_esr_msgs</name>
  <version>3.1.0</version>
  <description>Message definitions for the Delphi ESR</description>
  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/delphi_esr_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>
  <author email="jkale@autonomoustuff.com">Joe Kale</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend condition="$ROS_VERSION == 1">rosbag_migration_rule</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <rosbag_migration_rule rule_file="migration/EsrStatus1.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus2.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus3.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus4.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus5.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus6.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus7.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus8.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrStatus9.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrTrack.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrTrackMotionPower.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrValid1.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrValid2.bmr" />
    <rosbag_migration_rule rule_file="migration/EsrVehicle4.bmr" />
    <rosbag_migration_rule rule_file="migration/TrackMotionPower.bmr" />
  </export>
</package>
