<?xml version="1.0"?>
<package format="2">
  <name>delphi_srr_msgs</name>
  <version>2.2.1</version>
  <description>Message definitions for the Delphi SRR</description>
  <license>MIT</license>

  <maintainer email="support@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
