<?xml version="1.0"?>
<package format="2">
  <name>delphi_srr_msgs</name>
  <version>2.3.0</version>
  <description>Message definitions for the Delphi SRR</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/delphi_srr_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>

  <maintainer email="support@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
