<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delphi_srr_msgs</name>
  <version>3.1.0</version>
  <description>Message definitions for the Delphi SRR</description>
  <maintainer email="support@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/delphi_srr_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend condition="$ROS_VERSION == 1">rosbag_migration_rule</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <rosbag_migration_rule rule_file="migration/SrrDebug3.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrDebug4.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrDebug5.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrFeatureAlert.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrFeatureSwVersion.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrStatus1.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrStatus2.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrStatus3.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrStatus4.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrStatus5.bmr" />
    <rosbag_migration_rule rule_file="migration/SrrTrack.bmr" />
  </export>
</package>
