<?xml version="1.0"?>
<package format="2">
  <name>derived_object_msgs</name>
  <version>2.3.1</version>
  <description>Abstracted Messages from Perception Modalities</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/derived_object_msgs</url>
  <url type="repository">https://github.com/astuff/astuff_sensor_msgs</url>
  <url type="bugtracker">https://github.com/astuff/astuff_sensor_msgs/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Development Team</maintainer>
  <author email="dstanek@autonomoustuff.com">Daniel Stanek</author>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>radar_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
