<?xml version="1.0"?>
<package>
  <name>ibeo_lux_msgs</name>
  <version>1.6.0</version>
  <description>Message definitions for the Ibeo LUX and LUX Fusion</description>
  <license>LGPLv2.1</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>

  <url type="bugtracker">https://bitbucket.org/autonomoustuff/ros_ibeo_lux/issues</url>
  <url type="repository">https://bitbucket.org/autonomoustuff/ros_ibeo_lux</url>

  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="jkale@autonomoustuff.com">Joe Kale</author>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
