<?xml version="1.0"?>
<package format="2">
  <name>ibeo_msgs</name>
  <version>2.1.0</version>
  <description>Package containing messages for Ibeo sensors.</description>
  <license>MIT</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>
  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="jkale@autonomoustuff.com">Joe Kale</author>
  <author email="preed@swri.org">P.J. Reed</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
