<?xml version="1.0"?>
<package>
  <name>ibeo_scala_msgs</name>
  <version>1.6.0</version>
  <description>The ibeo_scala_msgs package</description>
  <license>LGPLv2.1</license>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>

  <url type="bugtracker">https://bitbucket.org/autonomoustuff/ros_ibeo_scala/issues</url>
  <url type="repository">https://bitbucket.org/autonomoustuff/ros_ibeo_scala</url>

  <author email="jwhitley@autonomoustuff.com">Joshua Whitley</author>
  <author email="preed@swri.org">P. J. Reed</author>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
